--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,7 +26,7 @@
 
 
 .themeToggle {
-    margin-left: 10px;
+    margin-left: 30px;
     display: flex;
     align-items: center;
 }
@@ -77,9 +77,8 @@ body {
     font-size: 20px; 
     padding: 10px; 
     padding-right: 0;
-    appearance: none; 
+    margin-right: 20px;
     -moz-appearance: none;
-    -webkit-appearance: none;
 }
 
 .font-select option { 
@@ -144,3 +143,15 @@ input:checked + .slider {
 input:checked + .slider:before {
     transform: translateX(26px);
 }
+
+@media (max-width: 1400px) {
+    .container {
+        padding: 15px 25px;
+    }
+    .themeToggle {
+        margin-left: 15px;
+    }
+    .font-select {
+        margin-right: 5px;
+    }
+  }
